--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,13 @@
     --purple-500: rgb(112, 120, 201);
     --shadow-color: rgba(216, 216, 216, 1);
 }
+*, *::after, *::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-
+/* Typography */
 body {
     font-family: "Rubik", sans-serif;
     font-size: 1.5rem;
