--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,16 @@
     --navy-200: rgb(187, 192, 255);
     --purple-600: rgb(81, 71, 234);
     --purple-500: rgb(112, 120, 201);
-    --shadow-color: rgba(216, 216, 216, 1);
+    --shadow-color: rgba(14, 19, 35, 0.2);
+    --border-radius: 15px;
 }
 *, *::after, *::before {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+html {
+    font-size: 62.5%;
 }
 
 /* Typography */
@@ -30,7 +34,7 @@ h1, h2, h3 {
 h1 {
     font-size: 2.4rem;
     font-weight: 300;
-    line-height: 2.8;
+    line-height: 28px;
 }
 
 h2 {
@@ -45,6 +49,10 @@ h3 {
     font-weight: 300;
 }
 
+ul {
+    list-style: none;
+}
+
 @media screen and (min-width: 600px) {
     h3 {
         font-size: 5.6rem;
@@ -55,6 +63,90 @@ h3 {
 @media screen and (min-width: 1024px) {
     h1 {
         font-size: 4rem;
-        line-height: 4.7;
+        line-height: 47px;
+    }
+}
+
+
+.container {
+    padding: 6rem 2rem;
+}
+
+@media screen and (min-width: 600px) {
+    body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+/* Profile */
+.profile {
+    position: relative;
+    --padding: 3.2rem
+}
+.profile-header {
+    border-radius: var(--border-radius);
+    padding: var(--padding);
+    background-color: var(--purple-600);
+    display: flex;
+    gap: 2.4rem;
+    position: relative;
+    z-index: 1;
+}
+
+.avatar {
+    width: 6.4rem;
+    height: 6.4rem;
+    border: 4px solid #fff;
+    border-radius: 100%;
+}
+
+.report-toggle-container {
+    padding: var(--padding);
+    border-radius: 0 0 var(--border-radius) var(--border-radius);
+    background-color: var(--primary-color);
+    transform: translateY(-10px);
+    position: static;
+    z-index: -1;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    user-select: none;
+    transition: color 0.3s ease;
+}
+
+.toggle:hover {
+    color: rgba(255, 255, 255, 0.6);
+    cursor: pointer;
+}
+.toggle[aria-selected="true"],
+.toggle:active {
+    color: #fff;
+}
+@media screen and (min-width: 600px) {
+    .report-toggle-container {
+        display: flex;
+        justify-content: space-evenly;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .avatar {
+        width: 7.8rem;
+        height: 7.8rem;
+        box-shadow: 0 5px 5px var(--shadow-color);
+    }
+    .profile {
+        max-width: 255px;
+    }
+    .profile-header {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 10rem;
+    }
+    .report-toggle-container {
+        display: flex;
+        flex-direction: column;
+        gap: 1.2rem;
     }
 }
